Removed up/down arrows on number textfields.

--- a/app/traste/src/index.css
+++ b/app/traste/src/index.css
@@ -22,3 +22,15 @@ code {
   src: url('./assets/gilroy.woff2') format('woff2');
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
