--- a/app/traste/src/index.css
+++ b/app/traste/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #dadada;
+  background-color: #80ed99;
 }
 
 code {
